# mlx

examples/cpp/: CMakeLists.txt  attention.cpp  nn.cpp  nn_inference_example.cpp  playground.cpp  test_nn.cpp  test_nn2.cpp
examples/cpp/nn/: module.cpp  utils.cpp
